--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
-name = "scale_morphology"
+name = "scale-morphology"
 version = "0.1.0"
 description = "Zebrafish scale shape analysis"
 readme = "README.md"
 authors = [
     { name = "Richard Lane", email = "richard.lane@bristol.ac.uk" }
 ]
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.10.0",
     "numpy>=2.2.2",
@@ -20,12 +20,9 @@ dependencies = [
     "tqdm>=4.67.1",
 ]
 
-[tool.hatch.envs.default]
-dev-mode = true
+[project.scripts]
+efa = "scale_morphology.scripts.efa:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/scale_analysis"]
