--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "torchvision>=0.21.0",
     "tqdm>=4.67.1",
     "pytest>=8.0.0",
+    "imageio>=2.37.0",
 ]
 
 [tool.pytest.ini_options]
