--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "tqdm>=4.67.1",
     "pytest>=8.0.0",
     "imageio>=2.37.0",
+    "shapely>=2.0.7",
 ]
 
 [tool.pytest.ini_options]
