--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "imageio>=2.37.0",
     "shapely>=2.0.7",
     "black>=25.1.0",
+    "umap>=0.1.1",
 ]
 
 [tool.pytest.ini_options]
