--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "black>=25.1.0",
     "bokeh>=3.7.0",
     "pandas>=2.2.3",
+    "ipykernel>=6.30.1",
 ]
 
 [tool.pytest.ini_options]
