--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "bokeh>=3.7.0",
     "pandas>=2.2.3",
     "ipykernel>=6.30.1",
+    "readlif>=0.6.6",
 ]
 
 [tool.pytest.ini_options]
