--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "pandas>=2.2.3",
     "ipykernel>=6.30.1",
     "readlif>=0.6.6",
+    "ipywidgets>=8.1.7",
 ]
 
 [tool.pytest.ini_options]
