--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,7 @@ dependencies = [
     "ipykernel>=6.30.1",
     "readlif>=0.6.6",
     "ipywidgets>=8.1.7",
-    "napari>=0.6.4",
-    "napari-bioformats>=0.2.1",
+    "liffile>=2025.5.10",
 ]
 
 [tool.pytest.ini_options]
