--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "readlif>=0.6.6",
     "ipywidgets>=8.1.7",
     "liffile>=2025.5.10",
+    "napari>=0.6.4",
+    "pyqt5>=5.15.11",
 ]
 
 [tool.pytest.ini_options]
