--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "nbdime>=4.0.2",
     "segment-anything>=1.0",
     "opencv-python>=4.12.0.88",
+    "seaborn>=0.13.2",
 ]
 
 [tool.pytest.ini_options]
