--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,2 @@
-# The location of the raw (RGB) TIFF segmentations
-# I just copied these from OneDrive
-binary_img_dir: "binary_imgs/"
-
-# This directory will be created if needed
-# Used for storing pre-processed (greyscale) segmentations
-processed_img_dir: "greyscale_cache/"
+# The location of the RDSF mount point
+rdsf_mount: "~/zebrafish_rdsf"
