--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "segment-anything>=1.0",
     "opencv-python>=4.12.0.88",
     "seaborn>=0.13.2",
+    "tifffile==2025.12.20",
 ]
 
 [tool.pytest.ini_options]
