--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ dependencies = [
     "opencv-python>=4.12.0.88",
     "seaborn>=0.13.2",
     "tifffile==2025.12.20",
+    "statsmodels>=0.14.6",
+    "pingouin>=0.5.5",
 ]
 
 [tool.pytest.ini_options]
