readme + script for tidying segmentations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     "readlif>=0.6.6",
     "ipywidgets>=8.1.7",
     "liffile>=2025.5.10",
-    "napari>=0.6.4",
+    "napari[pyqt5]>=0.6.4",
     "pyqt5>=5.15.11",
     "nbdime>=4.0.2",
     "segment-anything>=1.0",
